# LLMFlex

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  requirements_cuda.txt  setup.py
docs/html/llmflex/: cli.html  index.html  utils.html
docs/html/llmflex/Agents/: base_agent.html  index.html
docs/html/llmflex/Data/: index.html  sqlite_database.html  vector_database.html
docs/html/llmflex/Embeddings/: api_embeddings.html  base_embeddings.html  hf_embeddings_server.html  huggingface_embeddings.html  index.html
docs/html/llmflex/Frontend/: app_resource.html  gradio_interface.html  index.html  streamlit_interface.html
docs/html/llmflex/KnowledgeBase/: index.html  knowledge_base.html
docs/html/llmflex/Memory/: assistant_long_term_memory.html  base_memory.html  index.html  long_short_memory.html  longshort_memory.html  memory_utils.html
docs/html/llmflex/Models/: index.html
docs/html/llmflex/Prompts/: index.html  prompt_template.html
docs/html/llmflex/Rankers/: base_ranker.html  flashrank_ranker.html  index.html
docs/html/llmflex/Schemas/: documents.html  index.html  tokenizer.html
docs/html/llmflex/TextSplitters/: base_text_splitter.html  index.html  llm_text_splitter.html  sentence_token_text_splitter.html  token_text_splitter.html
docs/html/llmflex/Tools/: base_tool.html  browser_tool.html  (+8 more)
docs/html/llmplus/: cli.html  index.html  utils.html
docs/markdown/llmflex/: cli.md  index.md  utils.md
docs/markdown/llmplus/: cli.md  index.md  utils.md
llmplus/: __init__.py  cli.py
llmplus/Data/: vector_database.py
llmplus/Embeddings/: base_embeddings.py  huggingface_embeddings.py
llmplus/Frontend/: __init__.py  chat_interface.py
llmplus/Memory/: base_memory.py  long_short_memory.py
llmplus/Models/Cores/: base_core.py  huggingface_core.py  llamacpp_core.py  openai_core.py  text_splitter.py  utils.py
llmplus/Models/Factory/: llm_factory.py
llmplus/Prompts/: prompt_template.py
llmplus/Tools/: base_tool.py  web_search_tool.py
src/llmflex/: __init__.py  cli.py  utils.py
src/llmflex/Agents/: __init__.py  base_agent.py
src/llmflex/Data/: __init__.py  sqlite_database.py  vector_database.py
src/llmflex/Embeddings/: __init__.py  api_embeddings.py  base_embeddings.py  hf_embeddings_server.py  huggingface_embeddings.py
src/llmflex/Frontend/: __init__.py  app_resource.py  streamlit_interface.py
src/llmflex/KnowledgeBase/: __init__.py  knowledge_base.py
src/llmflex/Memory/: __init__.py  assistant_long_term_memory.py  base_memory.py  long_short_memory.py  longshort_memory.py  memory_utils.py
src/llmflex/Prompts/: __init__.py  prompt_template.py
src/llmflex/Rankers/: __init__.py  base_ranker.py  flashrank_ranker.py
src/llmflex/Schemas/: __init__.py  documents.py  tokenizer.py
src/llmflex/TextSplitters/: __init__.py  base_text_splitter.py  llm_text_splitter.py  sentence_token_text_splitter.py  token_text_splitter.py
src/llmflex/Tools/: __init__.py  base_tool.py  browser_tool.py  sd_tool.py  tool_classes.py  tool_prompting.py  tool_selection.py  tool_utils.py  web_search_tool.py  web_search_utils.py
src/llmflex/VectorDBs/: __init__.py  base_vectordb.py  faiss_vectordb.py
src/llmplus/: __init__.py  cli.py  utils.py
src/llmplus/Data/: vector_database.py
src/llmplus/Embeddings/: __init__.py  api_embeddings.py  hf_embeddings_server.py  huggingface_embeddings.py  llmplus_api_embeddings.py
src/llmplus/Frontend/: __init__.py  chat_interface.py  gradio_interface.py  streamlit_interface.py
src/llmplus/Memory/: __init__.py  base_memory.py  long_short_memory.py
src/llmplus/Models/: __init__.py
src/llmplus/TextSplitters/: __init__.py
src/llmplus/Tools/: __init__.py  base_tool.py  tool_selection.py  web_search_tool.py  web_search_utils.py
(+164 files in other folders)
