[project]
name = "llmplus"
description = "A python package for developing AI applications with local LLMs."
version = "0.0.11"
authors = [
    {name = "Pok Hin Tam", email = "nathan1295@gmail.com"},
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "click",
    "transformers>=4.35.0",
    "accelerate>=0.25.0",
    "sentence-transformers",
    "langchain",
    "faiss-cpu",
    "optimum",
    "gradio>=4.2",
    "duckduckgo-search",
    "fake-useragent",
    "openai>=1.0.0",
    "tiktoken",
    "protobuf",
    "beautifulsoup4",
]

[project.scripts]
llmplus = "llmplus.cli:cli"

[project.optional-dependencies]
cu121 = [
    "auto-gptq>=0.6.0",
    "autoawq",
    "exllamav2"
]
cu118 = [
    "auto-gptq@https://huggingface.github.io/autogptq-index/whl/cu118",
    "autoawq",
    "exllamav2"
]

[build-system]
requires = ["pdm-backend", "pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm]
package-type = "library"
src-layout = true

