[project]
name = "llmplus"
description = "A python package for developing AI applications with local LLMs."
dynamic = ["version"]

authors = [
    {name = "Nathan Tam", email = "nathan1295@gmail.com"},
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "click",
    "torch",
    "llama-cpp-python",
    "transformers>=4.35.0",
    "accelerate>=0.25.0",
    "sentence-transformers",
    "langchain",
    "faiss-cpu",
    "optimum",
    "gradio>=4.2",
    "duckduckgo-search",
    "fake-useragent",
    "openai>=1.0.0",
    "tiktoken",
    "protobuf",
    "beautifulsoup4",
    "streamlit",
    "watchdog",
    "spacy",
    "flask"
]

[project.urls]
Homepage = "https://github.com/nath1295/LLMPlus/tree/master"

[project.scripts]
llmplus = "llmplus.cli:cli"

[project.optional-dependencies]
cu121 = [
    "auto-gptq>=0.6.0",
    "autoawq",
    "exllamav2"
]
cu118 = [
    "auto-gptq@https://huggingface.github.io/autogptq-index/whl/cu118",
    "autoawq",
    "exllamav2"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.dynamic]
version = {attr = "llmplus.__version__"}  # Update this with the path to your __version__ variable

[tool.setuptools.packages.find]
where = ["src"]