[project]
name = "llmflex"
description = "A python package for developing AI applications with local LLMs."
dynamic = ["version"]

authors = [
    {name = "Nathan Tam", email = "nathan1295@gmail.com"},
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "click",
    "torch",
    "llama-cpp-python",
    "transformers>=4.35.0",
    "accelerate>=0.25.0",
    "sentence-transformers",
    "langchain",
    "faiss-cpu",
    "optimum",
    "gradio>=4.2",
    "duckduckgo-search>=6.1.0",
    "fake-useragent",
    "openai>=1.0.0",
    "tiktoken",
    "protobuf",
    "beautifulsoup4",
    "streamlit",
    "streamlit-extras",
    "watchdog",
    "guidance",
    "spacy>=3.7.0",
    "flask",
    "PyMuPDF",
    "flashrank",
    "python-docx"
]

[project.urls]
Homepage = "https://github.com/nath1295/LLMFlex"

[project.scripts]
llmflex = "llmflex.cli:cli"

[project.optional-dependencies]
cu121 = [
    "auto-gptq>=0.6.0",
    "autoawq",
    "exllamav2"
]
cu118 = [
    "auto-gptq",
    "autoawq",
    "exllamav2"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.dynamic]
version = {attr = "llmflex.__version__"}

[tool.setuptools.packages.find]
where = ["src"]